# ProjektSK2.2

./: .gitignore  CMakeLists.txt  Readme.md  Rules.txt  TODO.txt  client
.github/workflows/: build_windows.yml
ClientGui/: CMakeLists.txt  CMakeLists.txt.user.dd95445  main.cpp  mywidget.cpp  mywidget.h  mywidget.ui  mywidget.ui.autosave
resources/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
src/: client.cpp  encoding.cpp  gracz.cpp  lobby.cpp  main.cpp  serwer.cpp  serwer.h
